SERVER-45626: Introduce AutoGetOplog for consistent oplog locking rules

--- a/src/mongo/db/storage/wiredtiger/SConscript
+++ b/src/mongo/db/storage/wiredtiger/SConscript
@@ -86,6 +86,7 @@ if wiredtiger:
         LIBDEPS_PRIVATE= [
             'oplog_stone_parameters',
             '$BUILD_DIR/mongo/db/db_raii',
+            '$BUILD_DIR/mongo/db/catalog/database_holder',
             '$BUILD_DIR/mongo/db/commands/server_status',
             '$BUILD_DIR/mongo/db/snapshot_window_options',
             '$BUILD_DIR/mongo/db/storage/storage_repair_observer',
