--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -794,6 +794,7 @@ env.Library('replica_set_messages',
                 'update_position_args.cpp',
                 'last_vote.cpp',
                 env.Idlc('repl_set_config.idl')[0],
+                env.Idlc('repl_set_config_params.idl')[0],
             ],
             LIBDEPS=[
                 '$BUILD_DIR/mongo/base',
