--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -366,14 +366,14 @@ functions:
         script: |
           set -o verbose
           source ./signal_processing_venv/bin/activate
-          detect-changes --evergreen-api-config .evergreen.yml
+          detect-changes --config .signal-processing.yml
     - command: shell.exec
       params:
         working_dir: work
         script: |
           set -o verbose
           source ./signal_processing_venv/bin/activate
-          detect-outliers --evergreen-api-config .evergreen.yml
+          detect-outliers --config .signal-processing.yml
     - command: shell.exec
       type: setup
       params:
