--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -647,7 +647,7 @@ functions:
   "get buildnumber": &get_buildnumber
     command: keyval.inc
     params:
-      key: "${build_variant}_master"
+      key: "${build_variant}_v4.4"
       destination: "builder_num"
 
   "run diskstats": &run_diskstats
@@ -8497,7 +8497,7 @@ modules:
 - name: enterprise
   repo: git@github.com:10gen/mongo-enterprise-modules.git
   prefix: src/mongo/db/modules
-  branch: master
+  branch: v4.4
 
 - name: wtdevelop
   repo: git@github.com:wiredtiger/wiredtiger.git
