--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -890,7 +890,7 @@ modules:
 - name: enterprise
   repo: git@github.com:10gen/mongo-enterprise-modules.git
   prefix: src/mongo/db/modules
-  branch: master
+  branch: v4.4
 
 - name: mongo-tools
   repo: git@github.com:mongodb/mongo-tools.git
