--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -50,7 +50,7 @@ modules:
 - name: enterprise
   repo: git@github.com:10gen/mongo-enterprise-modules.git
   prefix: src/mongo/db/modules
-  branch: master
+  branch: v4.4
 - name: genny
   repo: git@github.com:mongodb/genny.git
   branch: master
