--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -353,6 +353,7 @@ error_codes:
 
     - {code: 307,name: RangeDeletionAbandonedBecauseTaskDocumentDoesNotExist}
     - {code: 308,name: CurrentConfigNotCommittedYet}
+    - {code: 309,name: ExhaustCommandFinished}
 
     # Error codes 4000-8999 are reserved.
 
