SERVER-44954 Streamable RSM uses exhaust isMaster
(cherry picked from commit 23e6f954d7ef5ab73f5540b46c6b3794b7ecfbdc)

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -353,6 +353,7 @@ error_codes:
 
     - {code: 307,name: RangeDeletionAbandonedBecauseTaskDocumentDoesNotExist}
     - {code: 308,name: CurrentConfigNotCommittedYet}
+    - {code: 309,name: ExhaustCommandFinished}
     - {code: 310,name: PeriodicJobIsStopped,categories: [CancelationError]}
 
     # Error codes 4000-8999 are reserved.
