--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -442,6 +442,8 @@ variables:
   - enterprise-ubuntu1804-arm64
   - enterprise-ubuntu1804-ppc64le
   - enterprise-ubuntu1804-s390x
+  - enterprise-windows
+  - windows
 
 
 #######################################
