--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -31,6 +31,8 @@ selector:
   # Enable when 4.2 becomes last-stable.
   - jstests/sharding/aggregation_internal_parameters.js
   - jstests/sharding/agg_error_reports_shard_host_and_port.js
+  # Because multi-document transactions cannot be run in a sharded cluster in 4.0.
+  - jstests/sharding/change_streams_delete_in_txn_produces_correct_doc_key.js
   - jstests/sharding/commands_that_write_accept_wc_shards.js
   - jstests/sharding/now_variable_replset.js
   - jstests/sharding/now_variable_sharding.js
