SERVER-46666 Add extra validate logging for unit tests for debug proposes
 rename src/mongo/db/storage/{storage_unittest_debug_util.cpp => storage_debug_util.cpp} (73%)
 rename src/mongo/db/storage/{storage_unittest_debug_util.h => storage_debug_util.h} (80%)

(cherry picked from commit 86d40fda4d156c0a439f1c5edb2b7890a085d337)

 rename src/mongo/db/storage/{storage_unittest_debug_util.cpp => storage_debug_util.cpp} (73%)
 rename src/mongo/db/storage/{storage_unittest_debug_util.h => storage_debug_util.h} (80%)

--- a/src/mongo/db/storage/SConscript
+++ b/src/mongo/db/storage/SConscript
@@ -212,9 +212,9 @@ env.Library(
 )
 
 env.Library(
-    target='storage_unittest_debug_util',
+    target='storage_debug_util',
     source=[
-        'storage_unittest_debug_util.cpp',
+        'storage_debug_util.cpp',
     ],
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/db/db_raii',
