SERVER-46344: Add 'newlyAdded' field to new nodes with votes: 1 in reconfig

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -688,8 +688,8 @@ env.Library(
         '$BUILD_DIR/mongo/db/index_builds_coordinator_interface',
         '$BUILD_DIR/mongo/idl/server_parameter',
         'local_oplog_info',
-        'split_horizon',
         'repl_server_parameters',
+        'split_horizon',
     ],
 )
 
@@ -804,6 +804,7 @@ env.Library('replica_set_messages',
             ],
             LIBDEPS_PRIVATE=[
                 '$BUILD_DIR/mongo/idl/server_parameter',
+                'repl_server_parameters',
                 'split_horizon',
             ])
 
@@ -1322,6 +1323,7 @@ env.CppUnitTest(
         'isself',
         'repl_coordinator_impl',
         'repl_coordinator_test_fixture',
+        'repl_server_parameters',
         'topology_coordinator',
     ]
 )
