SERVER-46675 Adds a new build variant for two phase index builds with commit quorum off.
(cherry picked from commit 0c34534ba8d6d1bdf1e339a87a8aa152548eee0d)

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -10210,15 +10210,16 @@ buildvariants:
   - name: .sharding .jscore !.wo_snapshot !.multi_stmt
   - name: .sharding .common !.multiversion
 
-- name: enterprise-rhel-62-64-bit-two-phase-index-build-majority-commit-quorum-on
-  display_name: "Enterprise RHEL 6.2 (2 phase index build majority commit quorum on)"
+- name: enterprise-rhel-62-64-bit-two-phase-index-build-commit-quorum-off
+  display_name: "Enterprise RHEL 6.2 (2 phase index build commit quorum off)"
   modules:
   - enterprise
   run_on:
   - rhel62-small
-  expansions: &enterprise-rhel-62-64-bit-two-phase-index-build-majority-commit-quorum-on
+  batchtime: 10080 # 7 days
+  expansions: &enterprise-rhel-62-64-bit-two-phase-index-build-commit-quorum-off
     test_flags: >-
-        --mongodSetParameters="{enableIndexBuildCommitQuorum: true}"
+        --mongodSetParameters="{enableIndexBuildCommitQuorum: false}"
     compile_flags: >-
       -j$(grep -c ^processor /proc/cpuinfo)
       --ssl
