SERVER-45143 use default value for 'protocolVersion' field during reconfigs
(cherry picked from commit 604c0afc97799516ba37880932948dbb008aa862)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -53,6 +53,8 @@ replica_sets_multiversion:
   test_file: jstests/replsets/trigger_initial_stable_checkpoint.js
 - ticket: SERVER-45178
   test_file: jstests/replsets/rollback_via_refetch_update_rollback_id_before_oplog_truncation.js
+- ticket: SERVER-45143
+  test_file: jstests/replsets/reconfig_uses_default_protocolVersion.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
