--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -26,6 +26,8 @@ selector:
   - jstests/sharding/migration_coordinator_killop_in_critical_section.js
   - jstests/sharding/migration_coordinator_shutdown_in_critical_section.js
   - jstests/sharding/test_stacked_migration_cleanup.js
+  - jstests/sharding/killop.js
+  - jstests/sharding/verify_sessions_expiration_sharded.js
   # Enable when SERVER-44733 is backported
   - jstests/sharding/change_streams_update_lookup_shard_metadata_missing.js
   # Enable when SERVER-43310 is backported
