--- a/buildscripts/resmokeconfig/suites/sharding_multiversion.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_multiversion.yml
@@ -7,6 +7,10 @@ selector:
   - multiversion_incompatible
   - requires_fcv_44
   - need_fixing_for_46
+  exclude_files:
+  # Enable when 4.4 becomes last stable
+  - jstests/sharding/killop.js
+  - jstests/sharding/verify_sessions_expiration_sharded.js
 executor:
   config:
     shell_options:
