--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -514,6 +514,7 @@ env.Library(
     target="commands",
     source=[
         'commands.cpp',
+        env.Idlc('commands_in_multi_doc_txn_params.idl')[0],
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
