SERVER-46369 Run mixed_version_replica_sets.js in required builder

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5269,6 +5269,16 @@ tasks:
       resmoke_args: "--storageEngine=wiredTiger --mongodSetParameters='{logComponentVerbosity: {command: 2}}'"
       name: jstestfuzz_sharded_session
 
+## Tests that the multiversion test generation logic is not broken.
+- name: multiversion_sanity_check_gen
+  commands:
+  - func: "generate multiversion tasks"
+    vars:
+      suite: replica_sets_jscore_passthrough
+      resmoke_args: --storageEngine=wiredTiger --includeWithAnyTags=multiversion_sanity_check
+      task_path_suffix: /data/multiversion
+      fallback_num_sub_suites: 1
+
 - name: replica_sets_jscore_multiversion_passthrough_gen
   tags: ["multiversion_passthrough"]
   commands:
@@ -9875,6 +9885,7 @@ buildvariants:
   - name: jsonSchema
   - name: .jstestfuzz !.flow_control  # Flow control jstestfuzz take longer.
   - name: libunwind_tests
+  - name: multiversion_sanity_check_gen
   - name: mqlrun
   - name: .multi_shard
   - name: multi_stmt_txn_jscore_passthrough_with_migration_gen
