SERVER-46746 Add sysbench large scale workload to sys-perf for durable history testing
(cherry picked from commit 1e74165ab03a736642cd87b2077613df57667590)

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -223,6 +223,8 @@ functions:
               tfvars:
                 # This is currently only used by initialsync-logkeeper. It is empty and not used for other tests.
                 mongod_seeded_ebs_snapshot_id: ${snapshotId}
+                # Initially used by sb_large_scale to override expire-on-delta to allow longer runtime on otherwise standard variants
+                ${additional_tfvars|}
             workload_setup:
               local_repos:
                 workloads: ../src/workloads/workloads
@@ -805,6 +807,28 @@ tasks:
     - func: "run test"
     - func: "analyze"
 
+- name: sb_large_scale
+  priority: 5
+  exec_timeout_secs: 43200 # 12 hours
+  commands:
+    - func: "prepare environment"
+      vars:
+        test: "sb_large_scale"
+        additional_tfvars: "tags: {expire-on-delta: 12}"
+    - func: "deploy cluster"
+    - func: "run test"
+    - func: "analyze"
+
+- name: sb_timeseries
+  priority: 5
+  commands:
+    - func: "prepare environment"
+      vars:
+        test: "sb_timeseries"
+    - func: "deploy cluster"
+    - func: "run test"
+    - func: "analyze"
+
 #######################################
 #               Modules               #
 #######################################
@@ -960,6 +984,8 @@ buildvariants:
     - name: tpcc
     - name: insert_remove
     - name: big_update
+    - name: sb_large_scale
+    - name: sb_timeseries
 
 - name: linux-standalone
   display_name: Linux Standalone
@@ -1174,6 +1200,8 @@ buildvariants:
     - name: tpcc
     - name: linkbench
     - name: big_update
+    - name: sb_large_scale
+    - name: sb_timeseries
 
 - name: linux-3-node-replSet-noflowcontrol
   display_name: Linux 3-Node ReplSet (Flow Control off)
