--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1792,6 +1792,7 @@ env.Library(
         'ops/update.cpp',
         'ops/write_ops_retryability.cpp',
         env.Idlc('ops/single_write_result.idl')[0],
+        env.Idlc('ops/delete_request.idl')[0],
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
