--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -607,6 +607,8 @@ functions:
 
         cat <<EOF > notary_env.sh
         export NOTARY_TOKEN=${signing_auth_token_42}
+        export BARQUE_USERNAME=${barque_user}
+        export BARQUE_PASSWORD=${barque_password}
         EOF
 
         echo "${signing_auth_token_42}" > signing_auth_token
@@ -6624,7 +6626,7 @@ tasks:
           CURATOR_RELEASE=${curator_release|"latest"}
           curl -L -O http://boxes.10gen.com/build/curator/curator-dist-rhel70-$CURATOR_RELEASE.tar.gz
           tar -zxvf curator-dist-rhel70-$CURATOR_RELEASE.tar.gz
-          ./curator repo --config ./etc/repo_config.yaml --distro ${packager_distro} --edition ${repo_edition} --version ${version} --arch ${packager_arch} --packages repo
+          ./curator repo submit --service ${barque_url} --config ./etc/repo_config.yaml --distro ${packager_distro} --edition ${repo_edition} --version ${version} --arch ${packager_arch} --packages https://s3.amazonaws.com/mciuploads/${project}/${build_variant}/${revision}/artifacts/${build_id}-packages.tgz
 
 - name: push
   tags: ["publish"]
