SERVER-46766 call infrastructure teardown after every perf run
(cherry picked from commit 57f73637ebb18f7a33b6255758fe110e47b94165)
(cherry picked from commit 1a8bbca590b26bbe84d47eeb023258023ae9ee68)

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -4,6 +4,24 @@ command_type: system
 pre:
 
 post:
+    # Do cluster teardown first to ensure runtime is below Evergreen's post timeout. Other post tasks
+    # will not have been run if the timeout is exceeded.
+    - command: shell.exec
+      params:
+        working_dir: work
+        script: |
+          source ./dsienv.sh
+          if [ -e /data/infrastructure_provisioning/terraform/provisioned.${cluster} ]; then
+            mark_idle.sh
+          fi
+    - command: shell.exec
+      params:
+        working_dir: work
+        script: |
+          set -e
+          set -v
+          source ./dsienv.sh
+          ../src/dsi/dsi/run-dsi infrastructure_teardown.py
     - command: shell.exec
       params:
         working_dir: work
@@ -37,15 +55,6 @@ post:
       params:
          name: "perf"
          file: "work/perf.json"
-    - command: shell.exec
-      params:
-        working_dir: work
-        script: |
-          source ./dsienv.sh
-          if [ -e /data/infrastructure_provisioning/terraform/provisioned.${cluster} ]; then
-            mark_idle.sh
-          fi
-
     - command: shell.exec
       params:
         working_dir: src
